src/test/ui/chalkify/bugs/async.stderr
error[E0277]: `[async fn body@$DIR/async.rs:7:29: 9:2]` is not a future
  --> $DIR/async.rs:7:29
   |
LL |   async fn foo(x: u32) -> u32 {
   |  _____________________________-
LL | |     x
LL | | }
   | | ^
   | | |
   | |_`[async fn body@$DIR/async.rs:7:29: 9:2]` is not a future
   |   required by a bound introduced by this call
   |
   = help: the trait `Future` is not implemented for `[async fn body@$DIR/async.rs:7:29: 9:2]`
   = note: [async fn body@$DIR/async.rs:7:29: 9:2] must be a future or must implement `IntoFuture` to be awaited
note: required by a bound in `identity_future`
  --> $SRC_DIR/core/src/future/mod.rs:LL:COL

error[E0277]: the size for values of type `<[async fn body@$DIR/async.rs:7:29: 9:2] as Future>::Output` cannot be known at compilation time
  --> $DIR/async.rs:7:29
   |
LL |   async fn foo(x: u32) -> u32 {
   |  _____________________________^
LL | |     x
LL | | }
   | |_^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `<[async fn body@$DIR/async.rs:7:29: 9:2] as Future>::Output`
note: required by a bound in `identity_future`
  --> $SRC_DIR/core/src/future/mod.rs:LL:COL

error[E0277]: `[async fn body@$DIR/async.rs:7:29: 9:2]` is not a future
  --> $DIR/async.rs:7:25
   |
LL | async fn foo(x: u32) -> u32 {
   |                         ^^^ `[async fn body@$DIR/async.rs:7:29: 9:2]` is not a future
   |
   = help: the trait `Future` is not implemented for `[async fn body@$DIR/async.rs:7:29: 9:2]`
   = note: [async fn body@$DIR/async.rs:7:29: 9:2] must be a future or must implement `IntoFuture` to be awaited

error[E0280]: the requirement `<[async fn body@$DIR/async.rs:7:29: 9:2] as Future>::Output == u32` is not satisfied
  --> $DIR/async.rs:7:25
   |
LL | async fn foo(x: u32) -> u32 {
   |                         ^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
